--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
+    "react-multi-date-picker": "^4.4.1",
     "react-otp-input": "^3.1.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-tag-input-component": "^2.0.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
