--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-VITE_BASE_URL=https://api.finalapp.ir/api
+# THIS FILE IS JUST A GUIDE FILE FOR SETTING ENV VARIABLE IN EACH MODE:
+VITE_BASE_URL=http://localhost:5000/api
